Fix spacing on home screen

--- a/src/pages/index.module.less
+++ b/src/pages/index.module.less
@@ -5,6 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 0 0.2em;
 }
 
 .postlist__entry {
